--- a/DOM-version/index.html
+++ b/DOM-version/index.html
@@ -7,6 +7,7 @@
     <title>DOM HTML</title>
 </head>
 <body>
+    <button onclick="secnalrt()">Display Second Alert</button>
     <script src="app.js"></script>
 </body>
 </html>
