added text box and text alert

--- a/DOM-version/index.html
+++ b/DOM-version/index.html
@@ -7,7 +7,11 @@
     <title>DOM HTML</title>
 </head>
 <body>
-    <button onclick="secnalrt()">No Click Here!</button>
+    <button onclick="feelsalrt()">No Click Here!</button>
+    <form action="">
+        <label for="">Write your feelings</label>
+        <textarea name="feels" id="feelsbox" cols="30" rows="10"></textarea>
+    </form>
     <script src="app.js"></script>
 </body>
 </html>
