--- a/DOM-version/index.html
+++ b/DOM-version/index.html
@@ -13,5 +13,9 @@
         <textarea name="feels" id="feelsbox" cols="30" rows="10"></textarea>
     </form>
     <script src="app.js"></script>
+    <button>6. My Friends!</button>
+    <ul>
+        <li></li>
+    </ul>
 </body>
 </html>
