--- a/DOM-version/index.html
+++ b/DOM-version/index.html
@@ -14,8 +14,8 @@
     </form>
     <script src="app.js"></script>
     <button>6. My Friends!</button>
-    <ul>
-        <li></li>
+    <ul class="friends">
+        
     </ul>
 </body>
 </html>
