--- a/DOM-version/index.html
+++ b/DOM-version/index.html
@@ -13,9 +13,9 @@
         <textarea name="feels" id="feelsbox" cols="30" rows="10"></textarea>
     </form>
     <script src="app.js"></script>
-    <button>6. My Friends!</button>
+    <button id="friendslist"">6. My Friends!</button>
     <ul class="friends">
-        
+
     </ul>
 </body>
 </html>
