--- a/DOM-version/index.html
+++ b/DOM-version/index.html
@@ -14,7 +14,7 @@
     </form>
     <script src="app.js"></script>
     <button id="friendsbtn" onclick="friendsList()">6. My Friends!</button>
-    <ul class="friends">
+    <ul id="friends">
 
     </ul>
 </body>
